--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,3 +7,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: pixelcmtd/markdown-doctest-action@master
+        with:
+          compiler: clang
